Remove h1 from button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="container">
         <div class="row" style="text-align: center;">
-            <h1><button id=genButton onclick="generateLink()">Copy link to clipboard</button></h1>
+            <button id=genButton onclick="generateLink()">Copy link to clipboard</button>
         </div>
     </div>
   </body>
