--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
             <div class="col-sm-4">
                 <div class="item">
                     <h2>Choose Year</h2>
-                    <select class="dropdown" id="year_dropdown" onchange="updateLink()">
+                    <select class="dropdownmenu" id="year_dropdown" onchange="updateLink()">
                     </select>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="item">
                     <h2>Choose Grand Prix</h2>
-                    <select class="dropdown" id="loc_dropdown" onchange="updateLink()">
+                    <select class="dropdownmenu" id="loc_dropdown" onchange="updateLink()">
                     </select>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="item">
                     <h2>Choose session</h2>
-                    <select class="dropdown" id="session_dropdown" onchange="updateLink()">
+                    <select class="dropdownmenu" id="session_dropdown" onchange="updateLink()">
                     </select>
                 </div>
             </div>
