--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>F1TV link generator</title>
+    <title>Fast F1 TV links</title>
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -15,7 +15,7 @@
   <body>
     <div class="container" style="width: 100%; background-color: #e10600; padding-bottom: 1em;">
         <div class="row" style="text-align: center;">
-            <h1 style="color: #fff;">Generate F1 TV links</h1>
+            <h1 style="color: #fff;">Fast F1 TV links</h1>
         </div>
       </div>
     <div class="container" style="text-align: center;">
