--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     <h2>Choose session</h2>
                     <select class="dropdownmenu" id="session_dropdown" onchange="updateLink();">
                     </select>
+                    <br>
+                    <div style="height: 1em;"></div>
+                    <span class="chkboxwrap"><input type="checkbox" id="f2-checkbox" class="chkbox" onchange="refreshSessions()"> F2</input></span>
+                    <span class="chkboxwrap"><input type="checkbox" id="f3-checkbox" class="chkbox" onchange="refreshSessions()"> F3</input></span>
+                    <span class="chkboxwrap"><input type="checkbox" id="supercup-checkbox" class="chkbox" onchange="refreshSessions()"> Supercup</input></span>
                 </div>
             </div>
         </div>
