Fixed state saving

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="item">
                     <h2>Year</h2>
                     <i class="arrow left" onclick="changeSelection('year', 1);"></i>
-                    <select class="dropdownmenu" id="year_dropdown" onchange="refreshGP(); updateLink();">
+                    <select class="dropdownmenu" id="year_dropdown" onchange="saveState(); refreshGP(); updateLink();">
                     </select>
                     <i class="arrow right" onclick="changeSelection('year', -1);"></i>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="item">
                     <h2>Grand Prix</h2>
                     <i class="arrow left" onclick="changeSelection('gp', -1);"></i>
-                    <select class="dropdownmenu" id="loc_dropdown" onchange="refreshSessions(); updateLink();">
+                    <select class="dropdownmenu" id="loc_dropdown" onchange="saveState(); refreshSessions(); updateLink();">
                     </select>
                     <i class="arrow right" onclick="changeSelection('gp', 1);"></i>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="item">
                     <h2>Session</h2>
                     <i class="arrow left" onclick="changeSelection('session', -1);"></i>
-                    <select class="dropdownmenu" id="session_dropdown" onchange="updateLink();">
+                    <select class="dropdownmenu" id="session_dropdown" onchange="saveState(); updateLink();">
                     </select>
                     <i class="arrow right" onclick="changeSelection('session', 1);"></i>
                     <br>
