cleanup, renamed "loc*" vars to "gp*" vars

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="item">
                     <h2>Grand Prix</h2>
                     <i class="arrow left" onclick="changeSelection('gp', -1);"></i>
-                    <select class="dropdownmenu" id="loc_dropdown" onchange="saveState(); refreshSessions(); updateLink();">
+                    <select class="dropdownmenu" id="gp_dropdown" onchange="saveState(); refreshSessions(); updateLink();">
                     </select>
                     <i class="arrow right" onclick="changeSelection('gp', 1);"></i>
                 </div>
